--- a/Bootstrap Basics/bootstrap-4/patterngallery.html
+++ b/Bootstrap Basics/bootstrap-4/patterngallery.html
@@ -12,12 +12,16 @@
     <title>Pattern [Practice]</title>
     <style>
         #header {
-            background: url("imgs/header.jpeg")
+            background: url("img/header.jpeg")
+        }
+
+        #navbar {
+            background-color: dodgerblue;
         }
     </style>
 </head>
 <body>
-    <nav class="navbar bg-dark navbar-dark">
+    <nav id="navbar" class="navbar navbar-dark">
         <div class="container">
             <a href="#" class="navbar-brand">
                 <i class="fas fa-binoculars mr-2"></i> Pattern</a>
@@ -35,7 +39,7 @@
         <div class="row ">
             <div class="col-lg-4 col-md-6 mb-3">
                 <div class="card">
-                    <img src="imgs/pattern1.jpeg" class="card-img-top">
+                    <img src="img/pattern1.jpeg" class="card-img-top">
                     <div class="card-body ">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -46,7 +50,7 @@
             </div>
             <div class="col-lg-4 col-md-6 mb-3">
                 <div class="card">
-                    <img src="imgs/pattern2.jpeg" class="card-img-top">
+                    <img src="img/pattern2.jpeg" class="card-img-top">
                     <div class="card-body ">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -57,7 +61,7 @@
             </div>
             <div class="col-lg-4 col-md-6 mb-3">
                 <div class="card">
-                    <img src="imgs/pattern3.jpeg" class="card-img-top">
+                    <img src="img/pattern3.jpeg" class="card-img-top">
                     <div class="card-body ">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
